<resources>
    <string name="app_name">Space DIM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ton_nom_d_astronaute">Ton nom d\'astronaute</string>
    <string name="bouton_creation_de_lobby">Bouton création de lobby</string>
    <string name="space_dim">Space DIM</string>
    <string name="serveur">Serveur :</string>
    <string name="entrer_dans_un_lobby">Entrer dans un lobby</string>
    <string name="aucun_lobby_rejoint">Aucun lobby rejoint</string>
    <string name="entrez_le_nom_d_un_lobby_pour_y_acceder_ou_le_creer">Entrez le nom d\'un lobby pour y accéder ou le créer...</string>
    <string name="casque_d_astronaute">Casque d\'astronaute</string>
    <string name="fly_not_far_from">Vous volez proche de Mercure</string>
    <string name="eject_player_2">Ejectez le joueur 2 !</string>
    <string name="verrouillage_des_portes">Verrouillage des portes</string>
    <string name="eject_player_4">Ejecter le joueur 4</string>
    <string name="allumage_des_lumieres">Allumage des lumières</string>
    <string name="win">Win</string>
    <string name="lose">Lose</string>
    <string name="une_rocket_apparait_symbolisant_la_victoire">Une Rocket apparait Symbolisant la victoire</string>
    <string name="felicitations">Félicitations !</string>
    <string name="apres_avoir_pass_pluton_vous_avez_d_couvert_une_nouvelle_galaxie_en_gagnant_3_600_points_au_passage">Après avoir passé Pluton, vous avez découvert une nouvelle galaxie, en gagnant 3 600 points au passage !</string>
    <string name="retour_au_menu_principal">Retour au menu principal</string>
    <string name="partie_terminee">Partie terminée</string>
    <string name="you_lose">Vous avez perdu, mais avez tout de même atteint Mars, avec un score de 3 600 !</string>
    <string name="backtoMenu">Retour au menu principal</string>
</resources>